--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,24 @@
 }
 
 
+
 .container-ruleta{
   display: flex;
   justify-content: center;
   height: 100vh;
+  text-align: center;
 }
+
+  
 
 .monedas{
   position: absolute;
-  top: 5px;
+  border: 1px solid goldenrod;
+  top: 35px;
   left: 50px;
+  height: 110px;
   width: 250px;
+  overflow: auto;
 }
 
 .tiradas{
@@ -107,9 +114,9 @@ img{
 
   .monedas{
     position: absolute;
-    top: 5px;
+    top: 35px;
     left: 35px;
-    width: 35px;
+    width: 150px;
   }
 
   .tiradas{
